# MotorVideojuegosIA

./: .bandit  .cursorrules  .gitattributes  .gitignore  AGENTS.md  COMO_EJECUTAR.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  START_HERE_AI.md  autosave.json  close_debug.txt  fix_game_loop.py  main.py  motor_ai.json  opencode.jsonc  opencode_help_debug.txt  opencode_tui_debug.txt  opencode_unicode_codes.txt  player_main.py  project.json  pty_cmd_debug.txt  pty_debug.txt  pty_debug2.txt  pty_debug3.txt  pyproject.toml  pyray.py  requirements.txt  run_platformer_demo.bat  sitecustomize.py  skills-lock.json  verify_gizmo_logic.py  verify_hierarchy_actions.py  verify_inspector.py  verify_prefabs.py  verify_scene_manager.py  verify_serialization.py
.github/: pull_request_template.md
.motor/: editor_state.json
artifacts/: debug_dump_smoke.json  demo_level_migrated.json  episodes_100_summary.json  golden_smoke.json  multiagent_rollouts_5ep.jsonl  physics_benchmark_box2d.json  physics_benchmark_box2d_ccd.json  physics_benchmark_legacy_ccd.json  profile_report_smoke.json  random_rollouts_10ep.jsonl  render_benchmark_5k.json  replay_episode_0000.json  tilemap_collision_benchmark_128.json
assets/: images.png.meta.json  images_1.png.meta.json  images_2.png.meta.json  images_3.png.meta.json  test_animator_modal.png.meta.json  test_animator_unsliced.png.meta.json  test_inspector_modal.png.meta.json  test_spritesheet.png.meta.json
cli/: __init__.py  headless_game.py  runner.py  runtime_runner.py  script_executor.py
docs/: AI_AUTHORING.md  ANALISIS_PROYECTO_ACTUAL.md  (+29 more)
(+811 files in other folders)
