[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "motorvideojuegosia"
version = "2026.03"
description = "Motor de videojuegos 2D IA-first en Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "raylib-py>=5.0.0.0",
]

[project.optional-dependencies]
dev = [
    "bandit>=1.7.10",
    "mypy>=1.12.0",
    "Pillow>=12.1.1",
    "pip-audit>=2.7.3",
    "ruff>=0.7.1",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["engine*", "cli*", "tools*"]

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [
    ".claude",
    ".git",
    ".motor",
    ".pytest_cache",
    "artifacts",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
follow_imports = "silent"
exclude = [
    "^tests/",
    "^artifacts/",
    "^build/",
    "^dist/",
]
